[gd_scene load_steps=8 format=2]

[ext_resource path="res://Sprites/Enemies/MMDG-1.png (1).png" type="Texture" id=1]
[ext_resource path="res://SFX/Sound effects Pack 2/Sound effects Pack 2/Random/WAV/Random 3 - Sound effects Pack 2.wav" type="AudioStream" id=2]
[ext_resource path="res://Scripts/Enemies_Fazzi/Boss_2.gd" type="Script" id=3]
[ext_resource path="res://SFX/Sound effects Pack 2/Sound effects Pack 2/Coins/WAV/Coins 3 - Sound effects Pack 2.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 15.3226, 15.3184 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 17.1154, 17.0044 )

[sub_resource type="Animation" id=3]
resource_name = "move"
length = 11.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8, 2, 3, 3.2, 3.4, 4.5, 5.5, 6, 6.5, 7, 8.5, 9.3, 9.6, 9.9, 11, 16 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 233.408, -81.4309 ), Vector2( 447.397, -267.727 ), Vector2( 447.204, -563.826 ), Vector2( 327.419, -576.088 ), Vector2( 340.094, -444.318 ), Vector2( 336.684, -580.243 ), Vector2( 224.874, -573.559 ), Vector2( 233.774, -75.4291 ), Vector2( 344.476, -250.263 ), Vector2( 447.238, -223.889 ), Vector2( 229.756, -133.919 ), Vector2( 445.46, -67.5672 ), Vector2( 449.448, -633.565 ), Vector2( 333.024, -446.045 ), Vector2( 228.345, -639.54 ), Vector2( 233.408, -81.4309 ), Vector2( 233.408, -81.4309 ) ]
}

[node name="Boss_2_Root" type="Node2D"]
position = Vector2( 233.408, -81.4309 )

[node name="Boss_2_KinematicBody" type="KinematicBody2D" parent="."]
position = Vector2( 233.408, -81.4309 )
scale = Vector2( 3, 2.5 )
collision_layer = 2
collision_mask = 3
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="Boss_2_Sprite" type="Sprite" parent="Boss_2_KinematicBody"]
scale = Vector2( 1, 1.19048 )
texture = ExtResource( 1 )

[node name="Boss_2_Col" type="CollisionShape2D" parent="Boss_2_KinematicBody"]
scale = Vector2( 1, 1.19048 )
shape = SubResource( 1 )

[node name="Boss_2_Hit" type="Area2D" parent="Boss_2_KinematicBody"]
scale = Vector2( 1, 1.19048 )
collision_layer = 2
collision_mask = 4

[node name="Boss_2_Col_Hit" type="CollisionShape2D" parent="Boss_2_KinematicBody/Boss_2_Hit"]
shape = SubResource( 2 )

[node name="Boss_2_Visibility" type="VisibilityNotifier2D" parent="Boss_2_KinematicBody"]
position = Vector2( 32.8732, 40.373 )
scale = Vector2( 11.1819, 24.2647 )

[node name="Boss_2_Animation" type="AnimationPlayer" parent="Boss_2_KinematicBody"]
anims/move = SubResource( 3 )

[node name="Boss_Hit_SFX" type="AudioStreamPlayer" parent="Boss_2_KinematicBody"]
stream = ExtResource( 4 )

[node name="Boss_Death_SFX" type="AudioStreamPlayer" parent="Boss_2_KinematicBody"]
stream = ExtResource( 2 )
[connection signal="area_entered" from="Boss_2_KinematicBody/Boss_2_Hit" to="Boss_2_KinematicBody" method="_on_Boss_2_Hit_area_entered"]
